--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,17 @@
 {
     "name": "cashdash-pro/zaar",
-    "description": "This is my package laravel-shopify",
+    "description": "A robust Laravel package for Shopify authentication handling both embedded and external app flows. Features JWT session management, seamless online/offline token handling, and automatic re-authentication for embedded apps. Built for Laravel 10+ and PHP 8.2+.",
     "keywords": [
         "CashDash",
         "laravel",
-        "laravel-shopify"
+        "laravel-shopify",
+        "shopify-app",
+        "shopify-authentication",
+        "shopify-embedded-apps",
+        "shopify-oauth",
+        "jwt-auth",
+        "session-management",
+        "php8"
     ],
     "homepage": "https://github.com/nick-potts/laravel-shopify",
     "license": "MIT",
@@ -19,7 +26,7 @@
         "php": "^8.2",
         "firebase/php-jwt": "^6.10",
         "illuminate/contracts": "^10.0||^11.0",
-        "laravel/prompts": "*",
+        "laravel/prompts": "^v0.3||^v0.2|^1",
         "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
