--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "php": "^8.2",
         "firebase/php-jwt": "^6.10",
         "illuminate/contracts": "^10.0||^11.0",
-        "laravel/prompts": "^v0.3||^v0.2|^1",
+        "laravel/prompts": "^0.1.0|^0.2.0|^0.3.0|^1.0",
         "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
